@@ -19,8 +19,10 @@ apport (0.99) UNRELEASED; urgency=low
   * bin/crash-digger: Use self.log() more consistently, and flush stdout in
     log(), so that we do not lose logs on output redirection.
   * Add test-crash-digger: Initial test suite for bin/crash-digger.
+  * apport/ui.py, run_crash(): Intercept CRC errors from the info collection
+    thread, which happens on broken core dumps. (LP: #132212)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 28 Oct 2007 12:17:19 -0400
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 28 Oct 2007 17:03:51 -0400
 
 apport (0.98) gutsy; urgency=low
 
